save videos metadata

--- a/test_scraper.ipynb
+++ b/test_scraper.ipynb
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 102,
    "id": "494d9b09",
    "metadata": {},
    "outputs": [
@@ -417,7 +417,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_13409/3469597454.py:2: DeprecationWarning: find_elements_by_id is deprecated. Please use find_elements(by=By.ID, value=id_) instead\n",
+      "/tmp/ipykernel_13409/3853662452.py:2: DeprecationWarning: find_elements_by_id is deprecated. Please use find_elements(by=By.ID, value=id_) instead\n",
       "  link = x.find_elements_by_id('video-title')\n"
      ]
     },
@@ -425,126 +425,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "45:23\n",
-      "Мэддисон катает шары в Elden Ring\n",
-      "33K views\n",
-      "6 hours ago https://www.youtube.com/watch?v=0iydsNVpqX0\n",
-      "29:15\n",
-      "Мэддисона забуллил взбесившийся волк в Elden Ring\n",
-      "140K views\n",
-      "6 days ago https://www.youtube.com/watch?v=8kEOoLomYzA\n",
-      "35:19\n",
-      "Мэддисон и очередной дед в Elden Ring\n",
-      "142K views\n",
-      "7 days ago https://www.youtube.com/watch?v=GlfZmcvRR7k\n",
-      "30:22\n",
-      "Мэддисон и дед номер два в Elden ring\n",
-      "141K views\n",
-      "9 days ago https://www.youtube.com/watch?v=aKerGDE5OTM\n",
-      "34:43\n",
-      "Мэддисон и его первый дед в Elden Ring\n",
-      "186K views\n",
-      "10 days ago https://www.youtube.com/watch?v=xWlj29Aa20s\n",
-      "39:24\n",
-      "Мэддисон и Welovegames отмечают десятилетие Warface\n",
-      "139K views\n",
-      "2 weeks ago https://www.youtube.com/watch?v=hDk5ulqy4V0\n",
-      "38:16\n",
-      "Мэддисон играет в Макса Пейна НА РУЛЕ\n",
-      "282K views\n",
-      "4 weeks ago https://www.youtube.com/watch?v=4CsK9a-2Y38\n",
-      "1:15:09\n",
-      "Мэддисон играет в Lost Ark и прощается с Твичем\n",
-      "193K views\n",
-      "1 month ago https://www.youtube.com/watch?v=wWTp4TkPF2s\n",
-      "42:01\n",
-      "Мэддисон нашел персонажа которого озвучил в Lost Ark\n",
-      "154K views\n",
-      "1 month ago https://www.youtube.com/watch?v=Fb4krKgBzwU\n",
-      "1:06:09\n",
-      "Мэддисон смотрит Музыкальный Ринг (Круг vs Трофим ), Шоу Окна, и пробует уральский майонез\n",
-      "248K views\n",
-      "1 month ago https://www.youtube.com/watch?v=IB3PZ0si_8I\n",
-      "43:35\n",
-      "Мэддисон играет в божественный Lost Ark и открывает собственный бар\n",
-      "142K views\n",
-      "1 month ago https://www.youtube.com/watch?v=x_uPR0e6MR8\n",
-      "51:17\n",
-      "Мэддисон и актуальные темы новой реальности /madcast\n",
-      "324K views\n",
-      "1 month ago https://www.youtube.com/watch?v=gRHFnysiaqc\n",
-      "37:18\n",
-      "Мэддисон играет в Ведьмака с плохими выборами #3\n",
-      "118K views\n",
-      "1 month ago https://www.youtube.com/watch?v=BDev2U3kPnI\n",
-      "21:28\n",
-      "Мэддисон играет в Warface и показывает кошку\n",
-      "137K views\n",
-      "1 month ago https://www.youtube.com/watch?v=Bfx-eswUtYY\n",
-      "39:12\n",
-      "Мэддисон играет в Ведьмака и ищет жену с иностранным гражданством\n",
-      "206K views\n",
-      "1 month ago https://www.youtube.com/watch?v=o77uAWMdrCc\n",
-      "43:32\n",
-      "Хайлайт по Ведьмаку и подкаст по текущей ситуации\n",
-      "283K views\n",
-      "1 month ago https://www.youtube.com/watch?v=MzcWtpNVp7Q\n",
-      "23:19\n",
-      "Мэдддисон зарабатывает социальные кредиты в игре Warm Snow\n",
-      "142K views\n",
-      "2 months ago https://www.youtube.com/watch?v=adBU8Ow9K0Q\n",
-      "37:20\n",
-      "Мэддисона удивила Horizon Forbidden West\n",
-      "225K views\n",
-      "2 months ago https://www.youtube.com/watch?v=1PCeaPnQJIU\n",
-      "31:56\n",
-      "Мэддисон смотрит что изменилось в патче 1.5 Cyberpunk 2077 PS5\n",
-      "272K views\n",
-      "2 months ago https://www.youtube.com/watch?v=frjDQsBdvkQ\n",
-      "54:19\n",
-      "Мэддисон начинает приключения в игре похожей на Mass Effect 2\n",
-      "181K views\n",
-      "2 months ago https://www.youtube.com/watch?v=JZkdQyDkLXo\n",
-      "23:09\n",
-      "Мэддисон вспоминает как тащить в Dota 2\n",
-      "184K views\n",
-      "2 months ago https://www.youtube.com/watch?v=qDsRrJ3XLMs\n",
-      "33:42\n",
-      "Мэддисон и братва рофлят в Своей игре\n",
-      "176K views\n",
-      "2 months ago https://www.youtube.com/watch?v=C3PDCx6kgUw\n",
-      "34:55\n",
-      "Мэддисона затоптали гигапетухи в LOST ARK\n",
-      "152K views\n",
-      "2 months ago https://www.youtube.com/watch?v=Fsyfn5eiEnI\n",
-      "1:13:38\n",
-      "Мэддисон про Некоглая, спортивные скандалы и многое другое /madcast\n",
-      "205K views\n",
-      "2 months ago https://www.youtube.com/watch?v=7DqIDTwveYY\n",
-      "26:42\n",
-      "Мэддисон играет в Футбольного Русского, ATOM RPG, и объявляет год платин\n",
-      "180K views\n",
-      "3 months ago https://www.youtube.com/watch?v=cDtKDIfohgI\n",
-      "43:55\n",
-      "Мэддисон заценил Dying Light 2: Stay Human\n",
-      "267K views\n",
-      "3 months ago https://www.youtube.com/watch?v=IqVzy8jO1OI\n",
-      "45:34\n",
-      "Мэддисон бродит по Нью Вегасу и болтает с чатом за жизнь #2\n",
-      "190K views\n",
-      "3 months ago https://www.youtube.com/watch?v=D0eEcfnVuYg\n",
-      "55:55\n",
-      "Мэддисон рассказывает как съездил к Хованскому, про ситуацию с каналом и играет Fallout New Vegas\n",
-      "342K views\n",
-      "3 months ago https://www.youtube.com/watch?v=DnqRuxZoS3I\n",
-      "37:23\n",
-      "Мэддисон выжил в реальности и в Fallout 4 #8 Финал\n",
-      "187K views\n",
-      "3 months ago https://www.youtube.com/watch?v=VPqkJ6_rPuc\n",
-      "42:29\n",
-      "Мэддисон хайпует выживая в Fallout 4 #7\n",
-      "145K views\n",
-      "3 months ago https://www.youtube.com/watch?v=hdAFOuTnT9Y\n"
+      "Мэддисон катает шары в Elden Ring https://www.youtube.com/watch?v=0iydsNVpqX0\n",
+      "Мэддисона забуллил взбесившийся волк в Elden Ring https://www.youtube.com/watch?v=8kEOoLomYzA\n",
+      "Мэддисон и очередной дед в Elden Ring https://www.youtube.com/watch?v=GlfZmcvRR7k\n",
+      "Мэддисон и дед номер два в Elden ring https://www.youtube.com/watch?v=aKerGDE5OTM\n",
+      "Мэддисон и его первый дед в Elden Ring https://www.youtube.com/watch?v=xWlj29Aa20s\n",
+      "Мэддисон и Welovegames отмечают десятилетие Warface https://www.youtube.com/watch?v=hDk5ulqy4V0\n",
+      "Мэддисон играет в Макса Пейна НА РУЛЕ https://www.youtube.com/watch?v=4CsK9a-2Y38\n",
+      "Мэддисон играет в Lost Ark и прощается с Твичем https://www.youtube.com/watch?v=wWTp4TkPF2s\n",
+      "Мэддисон нашел персонажа которого озвучил в Lost Ark https://www.youtube.com/watch?v=Fb4krKgBzwU\n",
+      "Мэддисон смотрит Музыкальный Ринг (Круг vs Трофим ), Шоу Окна, и пробует уральский майонез https://www.youtube.com/watch?v=IB3PZ0si_8I\n",
+      "Мэддисон играет в божественный Lost Ark и открывает собственный бар https://www.youtube.com/watch?v=x_uPR0e6MR8\n",
+      "Мэддисон и актуальные темы новой реальности /madcast https://www.youtube.com/watch?v=gRHFnysiaqc\n",
+      "Мэддисон играет в Ведьмака с плохими выборами #3 https://www.youtube.com/watch?v=BDev2U3kPnI\n",
+      "Мэддисон играет в Warface и показывает кошку https://www.youtube.com/watch?v=Bfx-eswUtYY\n",
+      "Мэддисон играет в Ведьмака и ищет жену с иностранным гражданством https://www.youtube.com/watch?v=o77uAWMdrCc\n",
+      "Хайлайт по Ведьмаку и подкаст по текущей ситуации https://www.youtube.com/watch?v=MzcWtpNVp7Q\n",
+      "Мэдддисон зарабатывает социальные кредиты в игре Warm Snow https://www.youtube.com/watch?v=adBU8Ow9K0Q\n",
+      "Мэддисона удивила Horizon Forbidden West https://www.youtube.com/watch?v=1PCeaPnQJIU\n",
+      "Мэддисон смотрит что изменилось в патче 1.5 Cyberpunk 2077 PS5 https://www.youtube.com/watch?v=frjDQsBdvkQ\n",
+      "Мэддисон начинает приключения в игре похожей на Mass Effect 2 https://www.youtube.com/watch?v=JZkdQyDkLXo\n",
+      "Мэддисон вспоминает как тащить в Dota 2 https://www.youtube.com/watch?v=qDsRrJ3XLMs\n",
+      "Мэддисон и братва рофлят в Своей игре https://www.youtube.com/watch?v=C3PDCx6kgUw\n",
+      "Мэддисона затоптали гигапетухи в LOST ARK https://www.youtube.com/watch?v=Fsyfn5eiEnI\n",
+      "Мэддисон про Некоглая, спортивные скандалы и многое другое /madcast https://www.youtube.com/watch?v=7DqIDTwveYY\n",
+      "Мэддисон играет в Футбольного Русского, ATOM RPG, и объявляет год платин https://www.youtube.com/watch?v=cDtKDIfohgI\n",
+      "Мэддисон заценил Dying Light 2: Stay Human https://www.youtube.com/watch?v=IqVzy8jO1OI\n",
+      "Мэддисон бродит по Нью Вегасу и болтает с чатом за жизнь #2 https://www.youtube.com/watch?v=D0eEcfnVuYg\n",
+      "Мэддисон рассказывает как съездил к Хованскому, про ситуацию с каналом и играет Fallout New Vegas https://www.youtube.com/watch?v=DnqRuxZoS3I\n",
+      "Мэддисон выжил в реальности и в Fallout 4 #8 Финал https://www.youtube.com/watch?v=VPqkJ6_rPuc\n",
+      "Мэддисон хайпует выживая в Fallout 4 #7 https://www.youtube.com/watch?v=hdAFOuTnT9Y\n"
      ]
     }
    ],
@@ -553,7 +463,7 @@
     "    link = x.find_elements_by_id('video-title')\n",
     "    assert len(link) == 1, \"links number are not equal to 1 for video\"\n",
     "    link = link[0].get_attribute('href')\n",
-    "    print(x.text, link)"
+    "    print(x.text.split('\\n')[1], link)"
    ]
   },
   {
