--- a/test_scraper.ipynb
+++ b/test_scraper.ipynb
@@ -381,7 +381,7 @@
    "source": [
     "# test\n",
     "xpath = '/html/body/ytd-app/div[1]/ytd-page-manager/ytd-browse/ytd-two-column-browse-results-renderer/div[1]/ytd-section-list-renderer/div[2]/ytd-item-section-renderer/div[3]/ytd-grid-renderer/div[1]/ytd-grid-video-renderer'\n",
-    "#xpath = '//*[@id=\"dismissible\"]'\n",
+    "xpath = '//*[@id=\"dismissible\"]'\n",
     "#xpath = '//div[contains(@class,\"stroke style-scope yt-interaction\")]'\n",
     "video_preview = driver.find_elements_by_xpath(xpath)"
    ]
